--- a/src/styles/expeditions.css
+++ b/src/styles/expeditions.css
@@ -1,19 +1,87 @@
 .zones {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
+  justify-content: center;
+  background-color: #121212; /* Dark background color */
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .zone {
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 10px;
-  width: 200px;
   position: relative;
+  width: 300px;
+  height: 400px;
+  border: none;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background-size 0.3s ease;
+  cursor: pointer;
+}
+
+.zone:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+  background-size: 110%;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Space between h2 and button */
+  position: absolute;
+  bottom: 100px;
+  left: 20px;
+  right: 20px; /* Add padding to the right */
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  padding: 5px 10px;
+  border-radius: 5px;
+  box-sizing: border-box; /* Include padding in width calculation */
 }
 
 .zone h2 {
-  margin-top: 0;
+  margin: 0;
+  color: white;
+  font-size: 1.5em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  padding: 0;
+  white-space: nowrap; /* Ensure the text does not wrap */
+  overflow: hidden; /* Hide overflow text */
+  text-overflow: ellipsis; /* Add ellipsis for overflow text */
+  max-width: 70%; /* Adjust max width for shorter headers */
+}
+
+.zone p {
+  position: absolute;
+  bottom: 40px;
+  left: 0; /* Adjust to cover the full width */
+  width: 100%; /* Ensure it spans the full width */
+  margin: 0;
+  color: white;
+  font-size: 1em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  padding: 5px 20px; /* Adjust padding to match the left padding of the container */
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  border-radius: 0 0 5px 5px; /* Rounded bottom corners */
+  box-sizing: border-box; /* Include padding in width calculation */
+}
+
+.zone button {
+  padding: 5px 10px;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  font-size: 1em; /* Increase font size */
+}
+
+.zone button:hover {
+  background-color: #32CD32; /* Lime green on hover */
 }
 
 .progress-bar-container {
