--- a/src/styles/expeditions.css
+++ b/src/styles/expeditions.css
@@ -104,9 +104,9 @@
 
 .progress-text {
   position: absolute;
-  left: 10px;
+  left: 50%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
   color: #fff;
   font-weight: bold;
 }
