feat(Game): Right click context menu.
Currently only works on the inventory page in slots that are occupied.
No logic or actions added for displaying the proper options available for said item, nor for what clicking will actually do.

--- a/src/styles/inventory.css
+++ b/src/styles/inventory.css
@@ -4,6 +4,10 @@
   gap: 35px;
 }
 
+.inventory-layout {
+  position: relative;
+}
+
 .equipment-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* Adjust the number based on how many columns you want */
